cluster/manifests/hippocampus-dev-device-flow-bridge/overlays/dev/device-flow-bridge/peer_authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: device-flow-bridge
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: device-flow-bridge
  mtls:
    mode: STRICT
