cluster/manifests/hippocampus-dev-device-flow-bridge/overlays/dev/device-flow-bridge/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: device-flow-bridge
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - hippocampus-dev-device-flow-bridge.minikube.127.0.0.1.nip.io
        - hippocampus-dev-device-flow-bridge.kaidotio.dev
        - hippocampus-dev-device-flow-bridge-public.kaidotio.dev
      port:
        number: 80
        name: http
        protocol: HTTP
