cluster/manifests/hippocampus-dev-device-flow-bridge/overlays/dev/device-flow-bridge/envoy_filter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: device-flow-bridge-access-log
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/component: device-flow-bridge
  configPatches:
    - applyTo: NETWORK_FILTER
      match:
        context: SIDECAR_INBOUND
        listener:
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
      patch:
        operation: MERGE
        value:
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            access_log:
              - name: envoy.access_loggers.file
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                  path: /dev/stdout
                  log_format:
                    json_format:
                      # http://ltsv.org/
                      time: "%START_TIME%"
                      host: "%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%"
                      forwardedfor: "%REQ(X-FORWARDED-FOR)%"
                      method: "%REQ(:METHOD)%"
                      uri: "%REQ(:PATH)%"
                      protocol: "%PROTOCOL%"
                      status: "%RESPONSE_CODE%"
                      size: "%BYTES_SENT%"
                      reqsize: "%BYTES_RECEIVED%"
                      referer: "%REQ(REFERER)%"
                      ua: "%REQ(USER-AGENT)%"
                      vhost: "%REQ(:AUTHORITY)%"
                      reqtime: "%DURATION%"
                      # Envoy specific fields
                      respflag: "%RESPONSE_FLAGS%"
                      # Additional fields
                      scheme: "%REQ(:SCHEME)%"
                      traceparent: "%REQ(TRACEPARENT)%"
                      "x-client-ip": "%REQ(X-CLIENT-IP)%"
                      xauthrequestuser: "%REQ(x-auth-request-user)%"
