cluster/manifests/hippocampus-dev-device-flow-bridge/overlays/dev/device-flow-bridge/virtual_service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: device-flow-bridge
spec:
  gateways:
    - device-flow-bridge
  hosts:
    - device-flow-bridge.minikube.127.0.0.1.nip.io
    - device-flow-bridge.kaidotio.dev
  http:
    - route:
        - destination:
            host: device-flow-bridge
            port:
              number: 8080
      retries:
        attempts: 3
        retryOn: gateway-error,retriable-4xx,connect-failure,refused-stream,unavailable,cancelled,retriable-status-codes
