cluster/manifests/hippocampus-dev-device-flow-bridge/overlays/dev/device-flow-bridge/authorization_policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: device-flow-bridge
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: device-flow-bridge
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces:
              - istio-gateways
            principals:
              - cluster.local/ns/istio-gateways/sa/istio-ingressgateway-service-account
      when:
        - key: request.headers[host]
          values:
            - hippocampus-dev-device-flow-bridge.minikube.127.0.0.1.nip.io
            - hippocampus-dev-device-flow-bridge.kaidotio.dev
    - from:
        - source:
            namespaces:
              - istio-gateways
            principals:
              - cluster.local/ns/istio-gateways/sa/istio-ingressgateway-service-account
      when:
        - key: request.headers[host]
          values:
            - hippocampus-dev-device-flow-bridge-public.kaidotio.dev
      to:
        - operation:
            methods:
              - POST
            paths:
              - /device/code
              - /token
        - operation:
            methods:
              - GET
            paths:
              - /callback
